--- a/src/styles.css
+++ b/src/styles.css
@@ -1,47 +1,63 @@
+body {
+  background: #000000;
+}
+
+.weather-block {
+  background: #000000;
+  box-shadow: 1px 1px 30px 6px #fe1493;
+  border-radius: 6px;
+  margin: 20px auto;
+  margin-top: 40px;
+  max-width: 450px;
+  padding: 20px;
+}
+
 .input-group-prepend {
-  max-width: 440px;
-  padding-top: 15px;
+  max-width: 400px;
+  padding-top: 0px;
   padding-bottom: 15px;
 }
 
 .current-city {
+  color: #ffffff;
   font-size: 32px;
   font-weight: 700;
-  padding-right: 130px;
+  padding-right: 50px;
 }
 
 .current-temp {
+  color: #ffffff;
   font-size: 28px;
   font-weight: 700;
+  padding-bottom: 5px;
+  padding-left: 0px;
+  padding-top: 5px;
   text-align: center;
-  padding-right: 10px;
-  border-right: 2px solid #000000;
+  border-right: 2px solid #ffffff;
 }
 
 .current-hi,
 .current-lo {
+  color: #ffffff;
   font-size: 12px;
+  padding-left: 5px;
   font-weight: 400;
   text-align: center;
 }
 
-.current-icon-desc {
-  text-align: center;
-  justify-content: center;
-  padding-left: 0px;
-}
-
 .current-icon {
-  color: #000000;
+  color: #ffffff;
   font-size: 42px;
   padding-bottom: 8px;
-  padding-right: 55px;
-  text-align: center;
+  padding-right: 10px;
+  padding-top: 12px;
 }
 
 .current-desc {
+  color: #ffffff;
   font-size: 16px;
   font-weight: 700;
+  text-align: center;
 }
 
 .current-weather {
@@ -50,17 +66,21 @@
 
 .weather-forecast {
   text-align: center;
+  display: block;
+  margin: 0 auto;
+  border: 0px;
+  padding: 0px;
 }
 
 .day-title {
   font-size: 20px;
-  color: #373a40;
+  color: #ffffff;
   text-align: center;
 }
 
 .icon {
   display: block;
-  color: #6c757d;
+  color: #ffffff;
   font-size: 32px;
   text-align: center;
   padding-bottom: 10px;
@@ -69,12 +89,12 @@
 .forecast-hilow {
   font-size: 13px;
   font-weight: 300;
-  color: #686d76;
+  color: #ffffff;
   text-align: center;
 }
 
 .scale-change {
-  padding-right: 45px;
+  margin: 0 auto;
   text-align: center;
 }
 
