--- a/src/styles.css
+++ b/src/styles.css
@@ -4,12 +4,14 @@ body {
 
 .weather-block {
   background: #000000;
-  box-shadow: 1px 1px 30px 6px #fe1493;
+  box-shadow: 1px 1px 30px 6px #f0a500;
   border-radius: 6px;
   margin: 20px auto;
   margin-top: 40px;
   max-width: 450px;
   padding: 20px;
+  padding-bottom: 5px;
+  top: 0;
 }
 
 .input-group-prepend {
@@ -20,14 +22,16 @@ body {
 
 .current-city {
   color: #ffffff;
-  font-size: 32px;
+  font-family: "Lobster", cursive;
+  font-size: 40px;
   font-weight: 700;
   padding-right: 50px;
 }
 
 .current-temp {
   color: #ffffff;
-  font-size: 28px;
+  font-family: "Lobster", cursive;
+  font-size: 32px;
   font-weight: 700;
   padding-bottom: 5px;
   padding-left: 0px;
@@ -39,7 +43,8 @@ body {
 .current-hi,
 .current-lo {
   color: #ffffff;
-  font-size: 12px;
+  font-family: "Lobster", cursive;
+  font-size: 16px;
   padding-left: 5px;
   font-weight: 400;
   text-align: center;
@@ -55,7 +60,8 @@ body {
 
 .current-desc {
   color: #ffffff;
-  font-size: 16px;
+  font-family: "Lobster", cursive;
+  font-size: 24px;
   font-weight: 700;
   text-align: center;
 }
@@ -67,13 +73,14 @@ body {
 .weather-forecast {
   text-align: center;
   display: block;
+  font-family: "Lobster", cursive;
   margin: 0 auto;
   border: 0px;
   padding: 0px;
 }
 
 .day-title {
-  font-size: 20px;
+  font-size: 24px;
   color: #ffffff;
   text-align: center;
 }
@@ -94,16 +101,24 @@ body {
 }
 
 .scale-change {
+  font-family: "Lobster", cursive;
+  font-size: 18px;
   margin: 0 auto;
   text-align: center;
 }
 
-#time,
-#footer {
-  color: #6c757d;
-  font-size: 12px;
+#time {
+  color: #ffffff;
+  font-family: "Lobster", cursive;
+  font-size: 13px;
+  padding-top: 10px;
+  padding-bottom: 0px;
+  text-align: center;
 }
 
-#time {
-  padding-top: 20px;
+#footer {
+  color: #6c757d;
+  font-size: 10px;
+  padding-top: 30px;
+  text-align: center;
 }
