--- a/src/styles.css
+++ b/src/styles.css
@@ -35,7 +35,7 @@ body {
   font-weight: 700;
   padding-bottom: 5px;
   padding-left: 0px;
-  padding-top: 5px;
+  padding-top: 10px;
   text-align: center;
   border-right: 2px solid #ffffff;
 }
@@ -50,12 +50,12 @@ body {
   text-align: center;
 }
 
-.current-icon {
-  color: #ffffff;
-  font-size: 42px;
-  padding-bottom: 8px;
-  padding-right: 10px;
-  padding-top: 12px;
+#current-icon {
+  display: block;
+  height: 80px;
+  width: 80px;
+  margin: 0 auto;
+  margin-top: -8px;
 }
 
 .current-desc {
@@ -85,10 +85,8 @@ body {
   text-align: center;
 }
 
-.icon {
+#icon-forecast {
   display: block;
-  color: #ffffff;
-  font-size: 32px;
   text-align: center;
   padding-bottom: 10px;
 }
@@ -107,11 +105,12 @@ body {
   text-align: center;
 }
 
-#time {
+#time,
+#last-refreshed {
   color: #ffffff;
+  display: block;
   font-family: "Lobster", cursive;
-  font-size: 13px;
-  padding-top: 10px;
+  font-size: 12px;
   padding-bottom: 0px;
   text-align: center;
 }
