--- a/src/styles.css
+++ b/src/styles.css
@@ -4,10 +4,10 @@ body {
 
 .weather-block {
   background: #000000;
-  box-shadow: 1px 1px 30px 6px #f0a500;
-  border-radius: 6px;
+  box-shadow: 0 0 60px 30px #fff, 0 0 100px 60px #f0f, 0 0 160px 50px #0ff;
+  border-radius: 20px;
   margin: 20px auto;
-  margin-top: 40px;
+  margin-top: 120px;
   max-width: 450px;
   padding: 20px;
   padding-bottom: 5px;
@@ -118,6 +118,6 @@ body {
 #footer {
   color: #6c757d;
   font-size: 10px;
-  padding-top: 30px;
+  padding-top: 0px;
   text-align: center;
 }
