--- a/src/styles.css
+++ b/src/styles.css
@@ -22,10 +22,21 @@ body {
 
 .current-city {
   color: #ffffff;
-  text-shadow: 0px 5px 10px #0779e4;
+  text-shadow: 0px 10px 10px #0779e4;
   font-family: "Lobster", cursive;
   font-size: 40px;
   font-weight: 700;
+  padding-right: 50px;
+}
+
+.current-wind,
+.current-humidity {
+  color: #ffffff;
+  text-shadow: 0px 5px 10px #0779e4;
+  font-family: "Lobster", cursive;
+  font-size: 16px;
+  font-weight: 200;
+  padding-left: 20px;
   padding-right: 50px;
 }
 
@@ -47,7 +58,7 @@ body {
   font-family: "Lobster", cursive;
   font-size: 16px;
   padding-left: 5px;
-  font-weight: 400;
+  font-weight: 200;
   text-align: center;
 }
 
@@ -80,6 +91,11 @@ body {
   padding: 0px;
 }
 
+.row.no-gutters {
+  margin-right: 0;
+  margin-left: 0;
+}
+
 .day-title {
   font-size: 24px;
   color: #ffffff;
@@ -97,6 +113,18 @@ body {
   font-weight: 300;
   color: #ffffff;
   text-align: center;
+}
+
+#day1-icon,
+#day2-icon,
+#day3-icon,
+#day4-icon,
+#day5-icon {
+  display: block;
+  height: 60px;
+  width: 60px;
+  margin: 0 auto;
+  padding: 0px;
 }
 
 .scale-change {
